--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -61,6 +61,7 @@ img.img-resp{
 
 
 // Container padding for special sections
+section#add-product .container,
 section#similar .container,
 section#user-login .container,
 section#cart .container,
@@ -100,6 +101,11 @@ section#details .details-gallery .img-gallery{
 }
 section#details ul li{
     list-style: none;
+}
+section#details .discount-percent{
+    border-radius: 5px;
+    padding: 3px;
+    font-size: 15px;
 }
 // Details end
 
