--- a/public/css/main.css
+++ b/public/css/main.css
@@ -62,6 +62,28 @@ img.img-resp {
   width: 80%;
 }
 
+/* pagination */
+.pager {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.pager li {
+  padding: 10px;
+}
+
 section#add-product .container,
 section#similar .container,
 section#user-login .container,
@@ -93,7 +115,7 @@ section#details .details-info {
 }
 
 section#details .details-gallery .img-gallery {
-  width: 100px;
+  width: calc(25% - 16px);
   cursor: pointer;
   border: 3px solid #d6d6d6;
   margin: 5px;
