--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -15,6 +15,17 @@ ul li{
     list-style: none;
 }
 
+// Main classes
+.discount-percent{
+    border-radius: 5px;
+    padding: 3px;
+    font-size: 15px;
+}
+.img-order{
+    max-width: 200px;
+}
+// Main classes end
+
 
 // products
 .product{
@@ -118,11 +129,6 @@ section#details .details-gallery .img-gallery{
     border: 3px solid #d6d6d6;
     margin: 5px;
 }
-section#details .discount-percent{
-    border-radius: 5px;
-    padding: 3px;
-    font-size: 15px;
-}
 // Details end
 
 
@@ -148,7 +154,7 @@ section#comments .media-response{
 
 // Cart
 section#cart .cart-image{
-    width: 150px;
+    width: 100px;
 }
 section#cart .cart-descr{
     width: 200px;
