--- a/public/css/main.css
+++ b/public/css/main.css
@@ -28,6 +28,13 @@ ul li {
   max-width: 200px;
 }
 
+.img-gallery {
+  width: calc(25% - 16px);
+  cursor: pointer;
+  border: 3px solid #d6d6d6;
+  margin: 5px;
+}
+
 .product {
   display: block;
   padding: 5px 5px 15px;
@@ -127,13 +134,6 @@ section#details .details-image {
 
 section#details .details-info {
   padding: 50px;
-}
-
-section#details .details-gallery .img-gallery {
-  width: calc(25% - 16px);
-  cursor: pointer;
-  border: 3px solid #d6d6d6;
-  margin: 5px;
 }
 
 section#comments .img-comment {
