--- a/public/css/main.css
+++ b/public/css/main.css
@@ -109,6 +109,8 @@ ul li {
   padding: 10px;
 }
 
+section#order .container,
+section#searched-products .container,
 section#user-profile .container,
 section#add-product .container,
 section#similar .container,
