--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -99,6 +99,7 @@ ul li{
 
 
 // Container padding for special sections
+section#order .container,
 section#searched-products .container,
 section#user-profile .container,
 section#add-product .container,
