--- a/public/css/main.css
+++ b/public/css/main.css
@@ -143,7 +143,7 @@ section#details .details-info {
 }
 
 section#comments .img-comment {
-  width: 100px;
+  height: 50px;
 }
 
 section#comments .media-comment {
@@ -151,15 +151,28 @@ section#comments .media-comment {
   border-radius: 20px;
   border: 3px solid #d6d6d67e;
   margin-top: 30px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+section#comments .media-comment.media-comment-other {
+  margin-right: auto;
 }
 
 section#comments .media-comment.media-comment-me {
   border: 3px solid #4390bc86;
+  margin-left: auto;
 }
 
 section#comments .media-response {
   border-top: 3px solid #d6d6d67e;
   padding: 10px;
+}
+
+section#comments .comment-date {
+  color: #707070;
+  font-size: 12px;
 }
 
 section#cart .cart-image {
