--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -139,20 +139,29 @@ section#details .details-info{
 
 // Comments
 section#comments .img-comment{
-    width: 100px;
+    height: 50px;
 }
 section#comments .media-comment{
     padding: 10px;
     border-radius: 20px;
     border: 3px solid #d6d6d67e;
     margin-top: 30px;
+    width: fit-content;
+}
+section#comments .media-comment.media-comment-other{
+    margin-right: auto;
 }
 section#comments .media-comment.media-comment-me{
     border: 3px solid #4390bc86;
+    margin-left: auto;
 }
 section#comments .media-response{
     border-top: 3px solid #d6d6d67e;
     padding: 10px;
+}
+section#comments .comment-date{
+    color: #707070;
+    font-size: 12px;
 }
 // Comments end
 
