--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -138,21 +138,28 @@ section#details .details-info{
 
 
 // Comments
-section#comments .img-comment{
+section#comments .comment-image{
     height: 50px;
+    width: 50px;
+    overflow: hidden;
+    border-radius: 50%;
+}
+section#comments .comment-image img{
+    height: 100%;
+    margin: 0 auto;
 }
 section#comments .media-comment{
     padding: 10px;
     border-radius: 20px;
-    border: 3px solid #d6d6d67e;
     margin-top: 30px;
     width: fit-content;
 }
 section#comments .media-comment.media-comment-other{
+    border: 1px solid #d6d6d67e;
     margin-right: auto;
 }
 section#comments .media-comment.media-comment-me{
-    border: 3px solid #4390bc86;
+    border: 1px solid #4390bc86;
     margin-left: auto;
 }
 section#comments .media-response{
