--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -143,10 +143,10 @@ section#comments .comment-image{
     width: 50px;
     overflow: hidden;
     border-radius: 50%;
+    text-align: center;
 }
 section#comments .comment-image img{
     height: 100%;
-    margin: 0 auto;
 }
 section#comments .media-comment{
     padding: 10px;
