Comments with load more button

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -183,6 +183,10 @@ section#comments .comment-date {
   font-size: 12px;
 }
 
+section#comments .btn-load-comments {
+  display: none;
+}
+
 section#cart .cart-image {
   width: 100px;
 }
