--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -170,6 +170,9 @@ section#comments .comment-date{
     color: #707070;
     font-size: 12px;
 }
+section#comments .btn-load-comments{
+    display: none;
+}
 // Comments end
 
 
