--- a/public/css/main.css
+++ b/public/css/main.css
@@ -39,6 +39,12 @@ ul li {
   max-width: 100px;
 }
 
+.dropdown-menu {
+  min-width: -webkit-fit-content;
+  min-width: -moz-fit-content;
+  min-width: fit-content;
+}
+
 .product {
   display: block;
   padding: 5px 5px 15px;
@@ -57,8 +63,7 @@ ul li {
 }
 
 .product.product-common {
-  -webkit-box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.12);
-          box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.12);
+  border: 1px solid #c5c5c5;
   width: 100%;
 }
 
