--- a/public/css/main.css
+++ b/public/css/main.css
@@ -222,11 +222,15 @@ section#cart .cart-descr {
 }
 
 @media (min-width: 1200px) {
-  #similar .product .discounted,
   #top-products .product .discounted {
     left: -35px;
     top: 28px;
     font-size: 16px;
+  }
+  #similar .product .discounted {
+    left: -46px;
+    top: 20px;
+    font-size: 11px;
   }
 }
 
