--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -223,11 +223,15 @@ section#cart .cart-descr{
 // X-Large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
     // Sections
-    #similar .product .discounted,
     #top-products .product .discounted{
         left: -35px;
         top: 28px;
         font-size: 16px;
+    }
+    #similar .product .discounted{
+        left: -46px;
+        top: 20px;
+        font-size: 11px;
     }
 }
 
