--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -103,6 +103,8 @@ ul li{
 
 
 // Container padding for special sections
+section#cat-table .container,
+section#categories .container,
 section#order .container,
 section#searched-products .container,
 section#user-profile .container,
