--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -36,6 +36,11 @@ ul li{
 .dropdown-menu{
     min-width: fit-content;
 }
+.error{
+    color: red;
+    padding: 0 5px;
+    font-size: 20px;
+}
 // Main classes end
 
 
